Updating USER microservices. Adding validations.